crates/ruff_linter/src/rules/pandas_vet/snapshots/ruff_linter__rules__pandas_vet__tests__PD007_fail.snap
---
source: crates/ruff_linter/src/rules/pandas_vet/mod.rs
---
PD007 `.ix` is deprecated; use more explicit `.loc` or `.iloc`
 --> <filename>:4:5
2 | import pandas as pd
3 | x = pd.DataFrame()
4 | y = x.ix[[0, 2], "A"]
  |     ^^^^^^^^^^^^^^^^^
