crates/ruff_linter/src/rules/pandas_vet/snapshots/ruff_linter__rules__pandas_vet__tests__PD010_fail_pivot.snap
---
source: crates/ruff_linter/src/rules/pandas_vet/mod.rs
---
PD010 `.pivot_table` is preferred to `.pivot` or `.unstack`; provides same functionality
 --> <filename>:4:9
  |
2 | import pandas as pd
3 | x = pd.DataFrame()
4 | table = pd.pivot(
  |         ^^^^^^^^
5 |     x,
6 |     index="foo",
