crates/ruff_linter/src/rules/pandas_vet/snapshots/ruff_linter__rules__pandas_vet__tests__PD013_fail_stack.snap
---
source: crates/ruff_linter/src/rules/pandas_vet/mod.rs
---
PD013 `.melt` is preferred to `.stack`; provides same functionality
 --> <filename>:4:5
2 | import pandas as pd
3 | x = pd.DataFrame()
4 | y = x.stack(level=-1, dropna=True)
  |     ^^^^^^^
